fix(index): overlapped bg color

--- a/css/main.css
+++ b/css/main.css
@@ -2,10 +2,12 @@
     font-family: 'RobotoLight';
     src: url('../assets/fonts/Roboto-Thin-webfont.woff');
 }
-html {
-    overflow-x: hidden;
+body {
+    text-align: left;
+    background-color: var(--default-theme);
 }
 .animate-in {
+    background-color: var(--default-theme);
     -webkit-animation: fadeIn .4s ease-in;
     animation: fadeIn .4s ease-in;
 }
@@ -21,10 +23,6 @@ html {
 @keyframes fadeIn {
     from { opacity: 0; }
     to { opacity: 1; }
-}
-body {
-    background: var(--default-theme);
-    text-align: left;
 }
 
 /* VARS SECTION ---------------------------------------------*/
